--- a/Task 1.html
+++ b/Task 1.html
@@ -5,8 +5,8 @@
 </head>
 <style>
     body{
-        background-color: skyblue;
-        color: white;
+        background-color: #E7FBB4;
+        color: #638C6D;
         padding: 10px;
     }
     h1{
@@ -54,7 +54,7 @@
     }
     table, th,td{
         border: 5px solid;
-        border-color:lime ;
+        border-color:#000957 ;
         border-collapse: collapse;
         text-align: center;
     }
@@ -69,6 +69,9 @@
     td:hover{
         background-color: silver;
         color: black;
+    }
+    form{
+        text-align: center;
     }
 </style>
 <body>
